feat(ops): Sprint 19 - 决策中心规则全线真实化 (5 条)
把决策中心剩余的 stub 规则升级为真实, 决策中心 11 条规则现在 9 条真实运行,
只剩 R-PROD-01 (PHI) 和 R-QC-01 (QC 投诉) 待品控/出口合规模块到位.

19.1 R-AR-02 大额应收 (stub -> real)
  - 数据源: PaymentMapper.arAgingByCustomer()
  - 单一客户 outstanding > 阈值 (200K/500K/1M KES) 分 low/medium/high
  - 集中度风险预警, 提醒商务跟进 / 设置 credit limit

19.2 R-AP-02 大额应付 (NEW, 镜像 AR-02)
  - 数据源: VendorPaymentMapper.apAgingBySupplier()
  - 单一供应商 payable > 阈值
  - 提醒备款 / 防断供

19.3 R-PROD-03 临采预警 (NEW)
  - plan_harvest_date 在 [today, today+7] 内
  - <=3 天 high (今日必做), 4-7 天 medium (本周风险)
  - 提醒 packhouse 备齐人手/分级线/物流

19.4 R-PROD-04 计划逾期未采收 (NEW)
  - plan_harvest_date < today AND status IN (planned, in_progress)
  - 1-3 天 medium, 4+ 天 high
  - 防漏采导致鲜度下降, 品级降, 卖不上价

19.5 R-INV-02 高损耗 (stub -> real)
  - 数据源: harvest_record.qty_kg vs SUM(batch.qty_kg WHERE harvest_record_id=...)
  - 替代算法 (缺 loss_record 表), 用 harvest -> batch 差值作 loss 代理
  - 损耗率 >=20%/30%/40% 分 low/medium/high
  - 提醒: 称重 / 挑拣淘汰 / 录入错误

文件:
- LargeArRule.java   (stub -> 106 行)
- LargeApRule.java   (NEW, 105 行)
- HarvestApproachingRule.java (NEW, 105 行)
- HarvestOverdueRule.java (NEW, 106 行)
- HighLossRule.java  (stub -> 140 行, 含 nested HarvestBatchSumProvider interface)
- HighLossRuleSupport.java (NEW, 47 行, JdbcTemplate 实现 HarvestBatchSumProvider 避免污染 BatchMapper)

验收: R-AP-02 已在前端 行动清单/本周风险 Tab 触发 (Athi River Fertilizers, 427500 KES),
证明引擎正确 pick up 新规则.